# staticfile

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  configure
examples/: doc.rs  doc_server.rs  hello.rs  mount.rs  router.rs
src/: cache_handler.rs  errors.rs  lib.rs  requested_path.rs  static_handler.rs
tests/: cache.rs  static.rs  static_tests.rs
