[package]

name = "staticfile"
version = "0.2.0"
authors = ["Zach Pomerantz <zmp@umich.edu>", "Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/staticfile"
license = "MIT"
keywords = ["iron", "web", "http", "file"]

[features]
cache = ["filetime"]

[dependencies]
iron = "0.4"
mount = "0.2"
time = "0.1"
log = "0.3"
url = "1.1"

[dependencies.filetime]
version = "0.1"
optional = true

[dev-dependencies]
iron-test = "0.4"
hyper = "0.9"
router = "0.2"
