[package]

name = "staticfile"
version = "0.3.1"
authors = ["Zach Pomerantz <zmp@umich.edu>", "Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/staticfile"
license = "MIT"
keywords = ["iron", "web", "http", "file"]

[features]
cache = ["filetime"]

[dependencies]
iron = "0.5"
mount = "0.3"
time = "0.1"
url = "1.1"

[dependencies.filetime]
version = "0.1"
optional = true

[dev-dependencies]
hyper = "0.10"
router = "0.5"

[dev-dependencies.iron-test]
git = "https://github.com/reem/iron-test.git"
rev = "3eaec2339a79952bb2864e7bf4ab7f690dd4f875"
