[package]

name = "staticfile"
version = "0.4.0"
authors = ["Zach Pomerantz <zmp@umich.edu>", "Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/staticfile"
license = "MIT"
keywords = ["iron", "web", "http", "file"]

[features]
cache = ["filetime"]

[dependencies]
iron = "0.5"
mount = "0.3"
time = "0.1"
url = "1.1"

[dependencies.filetime]
version = "0.1"
optional = true

[dev-dependencies]
hyper = "0.10"
router = "0.5"
iron-test = "0.5"
